# NovaOS

./: CMakeLists.txt  LICENSE  linker.ld
include/drivers/: vga.h
include/kernel/: gdt.h  idt.h  io.h  memory.h  multiboot.h  scheduler.h  task.h  types.h
src/boot/: boot.S  interrupt.S  paging.S  switch.S
src/drivers/: keyboard.c  pit.c  vga.c
src/kernel/: gdt.c  idt.c  main.c  memory.c  scheduler.c  syscall.c  vthread.c
